data/derived/sp14/progs/unify/prog2039.ml.out
Characters 97-129:
  | (head::tail) -> reverse_list_tail (head::result);;
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list -> 'a list
       but an expression was expected of type 'a list
